fix button alignment

--- a/Server/public/stylesheets/x-tag-components.css
+++ b/Server/public/stylesheets/x-tag-components.css
@@ -47,6 +47,7 @@ x-controlbar > x-action,
 x-controlbar > input[type="submit"] {
   background: #ddd;
   cursor: pointer;
+  line-height: 1em;
 }
 
 x-controlbar > input[type="text"],
